--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-validation": "^3.0.7",
+    "reactjs-popup": "^2.0.4",
     "validator": "^13.1.17",
     "web-vitals": "^0.2.4"
   },
